--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,64 @@
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.1</version>
-		</dependency>       
+		</dependency> 
+		<!-- DB를 연결하기 위한 ksb -->
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc14</artifactId>
+			<version>10.2.0.4.0</version>
+		</dependency>
+	
+		<!-- Mybatis Artifacts ksb -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.2.3</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+		<!--  spring jar -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		<!-- DBCP -->
+		<dependency>
+	        <groupId>commons-collections</groupId>
+	        <artifactId>commons-collections</artifactId>
+	        <version>3.2</version>       
+	      </dependency>
+	 
+	       
+	      <dependency>
+	        <groupId>commons-dbcp</groupId>
+	        <artifactId>commons-dbcp</artifactId>
+	        <version>1.4</version>       
+	      </dependency>
+	      
+	      
+	      <dependency>   
+	        <groupId>commons-logging</groupId>
+	        <artifactId>commons-logging</artifactId>
+	        <version>1.1.3</version>
+	      </dependency>
+	      
+	      <dependency>   
+	        <groupId>commons-pool</groupId>
+	        <artifactId>commons-pool</artifactId>
+	        <version>1.6</version>
+	      </dependency>
 	</dependencies>
     <build>
         <plugins>
@@ -166,4 +223,10 @@
             </plugin>
         </plugins>
     </build>
+    <repositories>
+	 	<repository>
+	        <id>mesir-repo</id>
+	        <url>http://mesir.googlecode.com/svn/trunk/mavenrepo</url>
+	   	</repository>
+ 	</repositories>
 </project>
