--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,14 +6,14 @@
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param> <!-- 기본으로 제공되는 파라미터는 사용되지 않음 -->
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml</param-value>
+		<param-value>/WEB-INF/spring/root-context.xml 
+		<!-- mybatis 설정내용들을 외부 파일에서 가져온다 -->
+		classpath:contextConfig.xml
+		</param-value>
 	</context-param>
 
 	<!-- mybatis 설정내용들을 외부 파일에서 가져온다 -->
-	<context-param>
-		<param-name>contextConfig</param-name>
-		<param-value>classpath:resources/contextConfig.xml</param-value>
-	</context-param>
+	
 	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
@@ -50,5 +50,6 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+  
   
 </web-app>
